# Ticket-sysytem

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Database/: BPT.hpp  MemoryRiver.hpp  exceptions.hpp
Utils/: Tokenscanner.hpp  tokenScanner.cpp
src/: Train.cpp  Train.hpp  User.cpp  User.hpp
